Modificate API in modo da usare i token per  autenticazione
