# server/handlers/utentiHandlers.mjs
@@ -12,13 +12,27 @@ async function getUtenteById(req, res) {
     try {
         const {id} = req.params;
         const utente = await utenteModel.Utente.findById(id);
+        const loggedId = req.utenteLoggato.loggedId; // ID dell'utente loggato
         
         if (!utente) {
             console.log("Utente non trovato.");
             return res.status(400).json({message: "Utente non trovato"});
         }
-        
-        return res.status(200).json({utente});
+
+        // Se l'utente cercato è uguale all'utente loggato resituisco tutte le informazioni dell'utente
+        if(utente.id==loggedId){
+            return res.status(200).json({utente});
+        }
+
+        // Altrimenti ritorna solo le informazioni pubbliche
+        return res.status(200).json({
+            username: utente.username, 
+            tipoUtente: utente.tipoUtente,
+            nome: utente.nome,
+            cognome: utente.cognome,
+            karma: utente.karma,
+            interessi: utente.interessi
+            });
     } catch (error) {
         return res.status(500).json({message: "Errore durante il recupero dell'utente", error: error.message});
     }
@@ -33,14 +47,23 @@ async function updateUtenteById(req, res) {
     try {
         const {id} = req.params;
         const updates = req.body;
-
+        const loggedId = req.utenteLoggato.loggedId; // ID dell'utente loggato
+        
         // Aggiorna il documento utente con tutti i campi forniti nel corpo della richiesta
         const utente = await utenteModel.Utente.findByIdAndUpdate(id, updates, {new: true});
-
         if (!utente) {
             return res.status(404).json({message: "Utente non trovato"});
         }
-        return res.status(200).json({utente});
+        
+        // Permetto la modifica dei dati utente solo se il chiamante dell'API è l'utente da modificare
+        if(utente.id==loggedId){
+            // Aggiorna il documento utente con tutti i campi forniti nel corpo della richiesta
+            const utente = await utenteModel.Utente.findByIdAndUpdate(id, updates, {new: true});
+            return res.status(200).json({message: "success", self: "utenti/" + utente._id});
+        }
+        else{
+            return res.status(403).json({message: "Impossibile modificare account altrui"});
+        }
 
     } catch (error) {
         return res.status(500).json({message: "Errore durante l'aggiornamento dell'utente", error: error.message});
@@ -55,6 +78,7 @@ async function updateUtenteById(req, res) {
 async function getUtenteByUsername(req, res) {
     try {
         const {username} = req.params;
+        const loggedId = req.utenteLoggato.loggedId; // ID dell'utente loggatow
 
         // Trova l'utente nel database utilizzando lo username
         const utente = await utenteModel.Utente.findOne({username: username});
@@ -62,8 +86,21 @@ async function getUtenteByUsername(req, res) {
         if (!utente) {
             return res.status(400).json({message: "Utente non trovato"});
         }
-        return res.status(200).json({utente});
 
+        // Se l'utente cercato è uguale all'utente loggato resituisco tutte le informazioni dell'utente
+        if(utente.id==loggedId){
+            return res.status(200).json({utente});
+        }
+
+        // Altrimenti ritorna solo le informazioni pubbliche
+        return res.status(200).json({
+            username: utente.username, 
+            tipoUtente: utente.tipoUtente,
+            nome: utente.nome,
+            cognome: utente.cognome,
+            karma: utente.karma,
+            interessi: utente.interessi
+            });
     } catch (error) {
         return res.status(500).json({message: "Errore durante il recupero dell'utente", error: error.message});
     }
@@ -106,8 +143,8 @@ async function signupUtente(req, res) {
 
     try {
         // Creazione dell'utente
-        await utenteModel.Utente.create({username, email, password});
-        return res.status(200).json({message: "success"});
+        const utente = await utenteModel.Utente.create({username, email, password});
+        return res.status(201).json({message: "success", self: "utenti/" + utente._id});
 
     } catch (error) {
         // Gestione dell'errore durante la creazione dell'utente
@@ -140,10 +177,31 @@ async function loginUtente(req, res){
         if (!isPasswordCorrect) {
             return res.status(401).json({success: false, message: 'Password sbagliata'});
         }
-        //TODO!! implementare token per autenticazione
-        return res.status(200).json({utente});
+        
+        // Se l'utente è stato trovato e la password è corretta, crea un token JWT
+        const payload = {
+            loggedId: utente._id, // Aggiungi l'ID dell'utente come informazione nel payload del token
+            loggedUsername: utente.username // Aggiungi l'username dell'utente come informazione nel payload del token
+        };
+
+        // Opzioni per la creazione del token JWT, incluso il tempo di scadenza
+        const options = {
+            expiresIn: process.env.JWT_EXPIRES_IN // Scadenza del token
+        };
+
+        // Crea un token JWT firmato utilizzando il payload, il segreto e le opzioni specificate
+        const token = jwt.sign(payload, process.env.JWT_SECRET_KEY, options);
+
+        // Invia una risposta JSON contenente il token appena creato, insieme ad altre informazioni
+        return res.status(200).json({
+            token: token, // Il token JWT appena creato
+            loggedId: utente._id, // ID dell'utente associato al token
+            loggedUsername: utente.username, // Username dell'utente associato al token
+            self: "utenti/" + utente._id // Link alla risorsa dell'utente nel formato API
+        });
         
     } catch (error) {
+        console.log(error);
         return res.status(500).json({success: false, message: "Errore interno del server"});
     } 
 }
