# server/routes/utentiRoutes.mjs
@@ -1,7 +1,18 @@
 import  Router  from "express";
-import * as handlers from "../handlers/utentiHandlers.mjs"
+import * as handlers from "../handlers/utentiHandlers.mjs";
+import tokenChecker from "../validators/tokenChecker.mjs";
 
 const router = Router();
+
+// Permette la registrazione di un utente
+router.post("/signup", handlers.signupUtente);
+
+// Permette il login di un utente
+router.post("/login", handlers.loginUtente);
+
+// Middleware
+router.use("/:id", tokenChecker);
+router.use("/username/:username", tokenChecker);
 
 // Permette di ottenere i dati di un utente tramite l'id
 router.get("/:id", handlers.getUtenteById);
@@ -11,13 +22,6 @@ router.put("/:id", handlers.updateUtenteById);
 
 // Permette di ottenere i dati di un utente tramite l'username
 router.get("/username/:username", handlers.getUtenteByUsername);
-
-// Permette la registrazione di un utente
-router.post("/signup", handlers.signupUtente);
-
-// Permette il login di un utente
-router.post("/login", handlers.loginUtente);
-
 
 // Esporta router
 export default router;
